--- a/index.html
+++ b/index.html
@@ -5,54 +5,55 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body>
+<body class="page">
     <!--шапка-->
     <header>
         <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-            <li><a href="./index.html">Студія</a></li>
-            <li><a href="">Портфоліо</a></li>
-            <li><a href="">Контакти</a></li>
+        <a href="./index.html" class="logo">WebStudio</a>
+        <ul class="site-nav list">
+            <li><a href="./index.html" class="link">Студія</a></li>
+            <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+            <li><a href="" class="link">Контакти</a></li>
         </ul>
     </nav>
-        <ul>
+        <ul class="auth-nav list">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
      </header>
      <main>
      <!--герой-->
-        <section>
-            <h1>Ефективні рішення для вашого бізнесу</h1>
-            <button type="button">Замовити послугу</button>
+        <section class="hero">
+            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <button type="button" class="button">Замовити послугу</button>
         </section>
      <!--Наші особливості-->
-     <section>
-        <h2>Наші особливості</h2>
-        <ul>
+     <section class="section">
+        <h2 class="section-title">Наші особливості</h2>
+        <ul class="feature-list">
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
             <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
         </li>
         <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
+            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
             <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-            <h3>ПЛАНУВАННЯ</h3>
+            <h3 class="title">ПЛАНУВАННЯ</h3>
             <p>Так само консультація з широким активом значною мірою зумовлює.</p>
         </li> 
         <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
             <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li> 
         </ul>
      </section>
      <!--Чим ми займаємось-->
-     <section>
-        <h2>Чим ми займаємося</h2>
+     <section class="section">
+        <h2 class="section-title">Чим ми займаємося</h2>
         <ul>
             <li>
                 <img src="./images/img-section-our-work-work-desc.jpg" width="370" alt="робочий стіл з комп'ютером">
@@ -66,8 +67,8 @@
         </ul>
      </section>
      <!--Наша команда-->
-     <section>
-        <h2>Наша команда</h2>
+     <section class="section">
+        <h2 class="section-title">Наша команда</h2>
         <ul>
             <li>
                 <img src="./images/img-section-our-team-pd.jpg" width="270" alt="чоловік в окулярах">
