--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width-device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Студія</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
     <!--шапка-->
-    <header>
+    <header class="header">
         <nav>
-        <a href="./index.html" class="logo">WebStudio</a>
+        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
         <ul class="site-nav list">
-            <li><a href="./index.html" class="link">Студія</a></li>
+            <li><a href="./index.html" class="link current">Студія</a></li>
             <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
             <li><a href="" class="link">Контакти</a></li>
         </ul>
     </nav>
         <ul class="auth-nav list">
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com" class="link-mail">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
         </ul>
      </header>
      <main>
@@ -30,31 +30,31 @@
             <button type="button" class="button">Замовити послугу</button>
         </section>
      <!--Наші особливості-->
-     <section class="section">
+     <section class="section-feature">
         <h2 class="section-title">Наші особливості</h2>
         <ul class="feature-list">
           <li>
             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
+            <p class="feature-list text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
         </li>
         <li>
             <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+            <p class="feature-list text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
             <h3 class="title">ПЛАНУВАННЯ</h3>
-            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
+            <p class="feature-list text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li> 
         <li>
             <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+            <p class="feature-list text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li> 
         </ul>
      </section>
      <!--Чим ми займаємось-->
-     <section class="section">
+     <section class="section-work">
         <h2 class="section-title">Чим ми займаємося</h2>
-        <ul>
+        <ul class="work-list">
             <li>
                 <img src="./images/img-section-our-work-work-desc.jpg" width="370" alt="робочий стіл з комп'ютером">
             </li>
@@ -67,39 +67,39 @@
         </ul>
      </section>
      <!--Наша команда-->
-     <section class="section">
+     <section class="section-team">
         <h2 class="section-title">Наша команда</h2>
-        <ul>
+        <ul class="team-list"> 
             <li>
                 <img src="./images/img-section-our-team-pd.jpg" width="270" alt="чоловік в окулярах">
-                <h3>Ігор Дем'яненко</h3>
-                <p>Product Designer</p>
+                <h3 class="title">Ігор Дем'яненко</h3>
+                <p team-list text>Product Designer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-fd.jpg" width="270" alt="жінка">
-                <h3>Ольга Рєпіна</h3>
-                <p>Frontend Developer</p>
+                <h3 class="title">Ольга Рєпіна</h3>
+                <p team-list text>Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-m.jpg" width="270" alt="чоловік">
-                <h3>Микола Тарасов</h3>
-                <p>Marketing</p>
+                <h3 class="title">Микола Тарасов</h3>
+                <p team-list text>Marketing</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-uid.jpg" width="270" alt="чоловік">
-                <h3>Михайло Єрмаков</h3>
-                <p>UI Designer</p>
+                <h3 class="title">Михайло Єрмаков</h3>
+                <p team-list text>UI Designer</p>
             </li>
         </ul>
      </section>
     </main>
-    <footer>
-        <a href="">WebStudio</a>
+    <footer class="footer">
+        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
         <address>
-            <ul>
-                <li><a href="https://goo.gl/maps/8p7UmijSQz6goDwR9" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="address-nav list">
+                <li><a href="https://goo.gl/maps/8p7UmijSQz6goDwR9" class="link-map" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
+                <li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
         </address>
     </footer>
