--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width-device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
@@ -94,7 +94,7 @@
      </section>
     </main>
     <footer class="footer">
-        <a href="./index.html" class="logo"><span class="accent">Web</span>Studio</a>
+        <a href="./index.html" class="logo-footer"><span class="accent">Web</span>Studio</a>
         <address>
             <ul class="address-nav list">
                 <li><a href="https://goo.gl/maps/8p7UmijSQz6goDwR9" class="link-map" target="_blank" rel="noreferrer noopener">м. Київ, пр-т Лесі Українки, 26</a></li>
