--- a/portfolio.html
+++ b/portfolio.html
@@ -24,25 +24,64 @@
         </ul>
      </header>
      <main>
-        <section>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+        <!-- кнопки-->
+        <section class="btn">
+            <ul class="btn-list">
+                <li><a href="" class="link current"></a>Усі</li>
+                <li><a href="" class="link"></a>Веб-сайти</li>
+                <li><a href="" class="link"></a>Додатки</li>
+                <li><a href="" class="link"></a>Дизайн</li>
+                <li><a href="" class="link"></a>Маркетинг</li>
             </ul>
-            <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-
+        </section>
+        <!-- картки-->
+        <section class="cards">
+            <ul class="cards-list">
+                <li>
+                    <img src="" width="370" alt="Ноутбук">
+                    <h3 class="cards-list-title">Технокряк</h3>
+                    <p class="cards-list-text">Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="чоловіки грають в баскетбол">
+                    <h3 class="cards-list-title">Постер New Orlean vs Golden Star</h3>
+                    <p class="cards-list-text">Дизайн</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="логотип ресторану">
+                    <h3 class="cards-list-title">Ресторан Seafood</h3>
+                    <p class="cards-list-text">Додаток</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="навушники">
+                    <h3 class="cards-list-title">Проєкт Prime</h3>
+                    <p class="cards-list-text">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="дві коробки">
+                    <h3 class="cards-list-title">Проєкт Boxes</h3>
+                    <p class="cards-list-text">Додаток</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="монітор">
+                    <h3 class="cards-list-title">Inspiration has no Borders</h3>
+                    <p class="cards-list-text" >Вебсайт</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="книга">
+                    <h3 class="cards-list-title">Видання Limited Edition</h3>
+                    <p class="cards-list-text">Дизайн</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="логотип">
+                    <h3 class="cards-list-title">Проєкт LAB</h3>
+                    <p class="cards-list-text">Маркетинг</p>
+                </li>
+                <li>
+                    <img src="" width="370" alt="людина працює з ноутбуком">
+                    <h3 class="cards-list-title">Growing Business</h3>
+                    <p class="cards-list-text">Додаток</p>
+                </li>
             </ul>
         </section>
      </main>
