добавляє img файли

--- a/index.html
+++ b/index.html
@@ -73,22 +73,22 @@
             <li>
                 <img src="./images/img-section-our-team-pd.jpg" width="270" alt="чоловік в окулярах">
                 <h3 class="title">Ігор Дем'яненко</h3>
-                <p team-list text>Product Designer</p>
+                <p class="team-list text">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-fd.jpg" width="270" alt="жінка">
                 <h3 class="title">Ольга Рєпіна</h3>
-                <p team-list text>Frontend Developer</p>
+                <p class="team-list text">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-m.jpg" width="270" alt="чоловік">
                 <h3 class="title">Микола Тарасов</h3>
-                <p team-list text>Marketing</p>
+                <p class="team-list text">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-uid.jpg" width="270" alt="чоловік">
                 <h3 class="title">Михайло Єрмаков</h3>
-                <p team-list text>UI Designer</p>
+                <p class="team-list text">UI Designer</p>
             </li>
         </ul>
      </section>
