--- a/portfolio.html
+++ b/portfolio.html
@@ -26,59 +26,61 @@
      <main>
         <!-- кнопки-->
         <section class="btn">
-            <ul class="btn-list">
-                <li><a href="" class="link current"></a>Усі</li>
-                <li><a href="" class="link"></a>Веб-сайти</li>
-                <li><a href="" class="link"></a>Додатки</li>
-                <li><a href="" class="link"></a>Дизайн</li>
-                <li><a href="" class="link"></a>Маркетинг</li>
-            </ul>
+          <h1>вміст сторінки</h1>
+          <ul class="btn-list">
+           <li><button type="button">Усі</button></li>
+            <li><button type="button">Веб-сайти</button></li>
+            <li><button type="button">Додатки</button></li>
+            <li><button type="button">Дизайн</button></li>
+            <li><button type="button">Маркетинг</button></li>
+        </ul>
         </section>
         <!-- картки-->
         <section class="cards">
+            <h2>список карток</h2>
             <ul class="cards-list">
                 <li>
-                    <img src="" width="370" alt="Ноутбук">
+                    <img src="./images/технокряк.jpg" width="370" alt="Ноутбук">
                     <h3 class="cards-list-title">Технокряк</h3>
                     <p class="cards-list-text">Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="чоловіки грають в баскетбол">
+                    <img src="./images/Orleans.jpg" width="370" alt="чоловіки грають в баскетбол">
                     <h3 class="cards-list-title">Постер New Orlean vs Golden Star</h3>
                     <p class="cards-list-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="логотип ресторану">
+                    <img src="./images/seafood.jpg" width="370" alt="логотип ресторану">
                     <h3 class="cards-list-title">Ресторан Seafood</h3>
                     <p class="cards-list-text">Додаток</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="навушники">
+                    <img src="./images/headphon.jpg" width="370" alt="навушники">
                     <h3 class="cards-list-title">Проєкт Prime</h3>
                     <p class="cards-list-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="дві коробки">
+                    <img src="./images/box.jpg" width="370" alt="дві коробки">
                     <h3 class="cards-list-title">Проєкт Boxes</h3>
                     <p class="cards-list-text">Додаток</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="монітор">
+                    <img src="./images/comp.jpg" width="370" alt="монітор">
                     <h3 class="cards-list-title">Inspiration has no Borders</h3>
                     <p class="cards-list-text" >Вебсайт</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="книга">
+                    <img src="./images/book.jpg" width="370" alt="книга">
                     <h3 class="cards-list-title">Видання Limited Edition</h3>
                     <p class="cards-list-text">Дизайн</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="логотип">
+                    <img src="./images/label.jpg" width="370" alt="логотип">
                     <h3 class="cards-list-title">Проєкт LAB</h3>
                     <p class="cards-list-text">Маркетинг</p>
                 </li>
                 <li>
-                    <img src="" width="370" alt="людина працює з ноутбуком">
+                    <img src="./images/laptop.jpg" width="370" alt="людина працює з ноутбуком">
                     <h3 class="cards-list-title">Growing Business</h3>
                     <p class="cards-list-text">Додаток</p>
                 </li>
