Добавляє шрифти в index.html

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Студія</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="page">
@@ -24,65 +27,61 @@
         </ul>
      </header>
      <main>
-        <!-- кнопки-->
-        <section class="btn">
-          <h1>вміст сторінки</h1>
-          <ul class="btn-list">
-           <li><button type="button">Усі</button></li>
-            <li><button type="button">Веб-сайти</button></li>
-            <li><button type="button">Додатки</button></li>
-            <li><button type="button">Дизайн</button></li>
-            <li><button type="button">Маркетинг</button></li>
+        <section class="portfolio">
+          <h1>наші проекти</h1>
+          <ul class="portfolio-btn">
+           <li><button type="button" class="button">Усі</button></li>
+            <li><button type="button" class="button">Веб-сайти</button></li>
+            <li><button type="button" class="button">Додатки</button></li>
+            <li><button type="button" class="button">Дизайн</button></li>
+            <li><button type="button" class="button">Маркетинг</button></li>
         </ul>
-        </section>
-        <!-- картки-->
-        <section class="cards">
-            <h2>список карток</h2>
-            <ul class="cards-list">
+        <!-- наші роботи-->
+            <ul class="portfolio-list">
                 <li>
                     <img src="./images/технокряк.jpg" width="370" alt="Ноутбук">
-                    <h3 class="cards-list-title">Технокряк</h3>
-                    <p class="cards-list-text">Веб-сайт</p>
+                    <h3 class="portfolio-list-title">Технокряк</h3>
+                    <p class="portfolio-list text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/Orleans.jpg" width="370" alt="чоловіки грають в баскетбол">
-                    <h3 class="cards-list-title">Постер New Orlean vs Golden Star</h3>
-                    <p class="cards-list-text">Дизайн</p>
+                    <h3 class="portfolio-list-title">Постер New Orlean vs Golden Star</h3>
+                    <p class="portfolio-list text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/seafood.jpg" width="370" alt="логотип ресторану">
-                    <h3 class="cards-list-title">Ресторан Seafood</h3>
-                    <p class="cards-list-text">Додаток</p>
+                    <h3 class="portfolio-list-title">Ресторан Seafood</h3>
+                    <p class="portfolio-list text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/headphon.jpg" width="370" alt="навушники">
-                    <h3 class="cards-list-title">Проєкт Prime</h3>
-                    <p class="cards-list-text">Маркетинг</p>
+                    <h3 class="portfolio-list-title">Проєкт Prime</h3>
+                    <p class="portfolio-list text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/box.jpg" width="370" alt="дві коробки">
-                    <h3 class="cards-list-title">Проєкт Boxes</h3>
-                    <p class="cards-list-text">Додаток</p>
+                    <h3 class="portfolio-list-title">Проєкт Boxes</h3>
+                    <p class="portfolio-list text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/comp.jpg" width="370" alt="монітор">
-                    <h3 class="cards-list-title">Inspiration has no Borders</h3>
-                    <p class="cards-list-text" >Вебсайт</p>
+                    <h3 class="portfolio-list-title">Inspiration has no Borders</h3>
+                    <p class="portfolio-list text" >Вебсайт</p>
                 </li>
                 <li>
                     <img src="./images/book.jpg" width="370" alt="книга">
-                    <h3 class="cards-list-title">Видання Limited Edition</h3>
-                    <p class="cards-list-text">Дизайн</p>
+                    <h3 class="portfolio-list-title">Видання Limited Edition</h3>
+                    <p class="portfolio-list text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/label.jpg" width="370" alt="логотип">
-                    <h3 class="cards-list-title">Проєкт LAB</h3>
-                    <p class="cards-list-text">Маркетинг</p>
+                    <h3 class="portfolio-list-title">Проєкт LAB</h3>
+                    <p class="portfolio-list text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/laptop.jpg" width="370" alt="людина працює з ноутбуком">
-                    <h3 class="cards-list-title">Growing Business</h3>
-                    <p class="cards-list-text">Додаток</p>
+                    <h3 class="portfolio-list-title">Growing Business</h3>
+                    <p class="portfolio-list text">Додаток</p>
                 </li>
             </ul>
         </section>
