Виправляє помилки після зауваженнь ментора

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="page">
+<body>
     <!--шапка-->
     <header class="header">
         <nav>
@@ -29,12 +29,12 @@
      <main>
      <!--герой-->
         <section class="hero">
-            <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+            <h1 class="hero-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
             <button type="button" class="button">Замовити послугу</button>
         </section>
      <!--Наші особливості-->
      <section class="section-feature">
-        <h2 class="section-title">Наші особливості</h2>
+        <h2 hidden>Наші особливості</h2>
         <ul class="feature-list">
           <li>
             <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
