--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@
      </header>
      <main>
         <section class="portfolio">
-          <h1>наші проекти</h1>
+          <h1 hidden>наші проекти</h1>
           <ul class="portfolio-btn">
            <li><button type="button" class="button">Усі</button></li>
             <li><button type="button" class="button">Веб-сайти</button></li>
