Вносить виправлення після повторних зауваженнь ментора

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
         </section>
      <!--Наші особливості-->
      <section class="section-feature">
-        <h2 hidden>Наші особливості</h2>
+        <h2 class="visually-hidden">Наші особливості</h2>
         <ul class="feature-list">
           <li>
-            <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+            <h2 class="title">УВАГА ДО ДЕТАЛЕЙ</h2>
             <p class="feature-list text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції. </p>
         </li>
         <li>
-            <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+            <h2 class="title">ПУНКТУАЛЬНІСТЬ</h2>
             <p class="feature-list text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
         </li>
         <li>
-            <h3 class="title">ПЛАНУВАННЯ</h3>
+            <h2 class="title">ПЛАНУВАННЯ</h2>
             <p class="feature-list text">Так само консультація з широким активом значною мірою зумовлює.</p>
         </li> 
         <li>
-            <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+            <h2 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
             <p class="feature-list text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
         </li> 
         </ul>
@@ -75,22 +75,22 @@
         <ul class="team-list"> 
             <li>
                 <img src="./images/img-section-our-team-pd.jpg" width="270" alt="чоловік в окулярах">
-                <h3 class="title">Ігор Дем'яненко</h3>
+                <h2 class="title">Ігор Дем'яненко</h2>
                 <p class="team-list text">Product Designer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-fd.jpg" width="270" alt="жінка">
-                <h3 class="title">Ольга Рєпіна</h3>
+                <h2 class="title">Ольга Рєпіна</h2>
                 <p class="team-list text">Frontend Developer</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-m.jpg" width="270" alt="чоловік">
-                <h3 class="title">Микола Тарасов</h3>
+                <h2 class="title">Микола Тарасов</h2>
                 <p class="team-list text">Marketing</p>
             </li>
             <li>
                 <img src="./images/img-section-our-team-uid.jpg" width="270" alt="чоловік">
-                <h3 class="title">Михайло Єрмаков</h3>
+                <h2 class="title">Михайло Єрмаков</h2>
                 <p class="team-list text">UI Designer</p>
             </li>
         </ul>
