--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
-<body class="page">
+<body>
     <!--шапка-->
     <header class="header">
         <nav>
@@ -28,7 +28,7 @@
      </header>
      <main>
         <section class="portfolio">
-          <h1 hidden>наші проекти</h1>
+          <h1 class="visually-hidden">наші проекти</h1>
           <ul class="portfolio-btn">
            <li><button type="button" class="button">Усі</button></li>
             <li><button type="button" class="button">Веб-сайти</button></li>
@@ -40,47 +40,47 @@
             <ul class="portfolio-list">
                 <li>
                     <img src="./images/технокряк.jpg" width="370" alt="Ноутбук">
-                    <h3 class="portfolio-list-title">Технокряк</h3>
+                    <h2 class="portfolio-list-title">Технокряк</h2>
                     <p class="portfolio-list text">Веб-сайт</p>
                 </li>
                 <li>
                     <img src="./images/Orleans.jpg" width="370" alt="чоловіки грають в баскетбол">
-                    <h3 class="portfolio-list-title">Постер New Orlean vs Golden Star</h3>
+                    <h2 class="portfolio-list-title">Постер New Orlean vs Golden Star</h2>
                     <p class="portfolio-list text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/seafood.jpg" width="370" alt="логотип ресторану">
-                    <h3 class="portfolio-list-title">Ресторан Seafood</h3>
+                    <h2 class="portfolio-list-title">Ресторан Seafood</h2>
                     <p class="portfolio-list text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/headphon.jpg" width="370" alt="навушники">
-                    <h3 class="portfolio-list-title">Проєкт Prime</h3>
+                    <h2 class="portfolio-list-title">Проєкт Prime</h2>
                     <p class="portfolio-list text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/box.jpg" width="370" alt="дві коробки">
-                    <h3 class="portfolio-list-title">Проєкт Boxes</h3>
+                    <h2 class="portfolio-list-title">Проєкт Boxes</h2>
                     <p class="portfolio-list text">Додаток</p>
                 </li>
                 <li>
                     <img src="./images/comp.jpg" width="370" alt="монітор">
-                    <h3 class="portfolio-list-title">Inspiration has no Borders</h3>
+                    <h2 class="portfolio-list-title">Inspiration has no Borders</h2>
                     <p class="portfolio-list text" >Вебсайт</p>
                 </li>
                 <li>
                     <img src="./images/book.jpg" width="370" alt="книга">
-                    <h3 class="portfolio-list-title">Видання Limited Edition</h3>
+                    <h2 class="portfolio-list-title">Видання Limited Edition</h2>
                     <p class="portfolio-list text">Дизайн</p>
                 </li>
                 <li>
                     <img src="./images/label.jpg" width="370" alt="логотип">
-                    <h3 class="portfolio-list-title">Проєкт LAB</h3>
+                    <h2 class="portfolio-list-title">Проєкт LAB</h2>
                     <p class="portfolio-list text">Маркетинг</p>
                 </li>
                 <li>
                     <img src="./images/laptop.jpg" width="370" alt="людина працює з ноутбуком">
-                    <h3 class="portfolio-list-title">Growing Business</h3>
+                    <h2 class="portfolio-list-title">Growing Business</h2>
                     <p class="portfolio-list text">Додаток</p>
                 </li>
             </ul>
